# Changelog

## Version  3.2.0

* Adding #75 burn-in subtitle support - will auto-select first subtitle track that is forced, or default as lower priority (thanks to Trevbams)
* Adding #84 pause / resume functionality (thanks to loungebob)

## Version  3.1.0

* Adding support for movie title
* Adding settings for disable update check on startup and limited audio conversions
* Adding #57 after conversion options (thanks to TGMais)
* Adding Windows should not to go to sleep during conversion
* Changing #80 thumbnail preview will start at 10% in if no start time given (thanks to zsumie)
* Changing no longer need to restart for setting page changes
* Changing width and height will only give warnings if not divisible by two
* Fixing output name is not regenerated on encoder switch if matching extension
* Fixing #79 crash on no internet connection (thanks to L0Lock)
* Fixing output paths not working on network drives

## Version  3.0.2

* Fixing #76 Windows FFmpeg builds switch from gyan.dev to https://github.com/BtbN/FFmpeg-Builds/releases (thanks to sioc)
* Fixing failure size calculation limit on file to 500 bytes due to VP9

## Version  3.0.1

* Fixing missing import when installing from pip (linux only release)

## Version  3.0.0

* Adding AVC support (libx264)
* Adding #65 rav1e support (librav1e)
* Adding #49 SVT AV1 support (libsvtav1) directly with FFmpeg
* Adding SVT AV1 dual pass, tier, scene detection, and tile parameters
* Adding #67 Status Panel to view encoding logs
* Adding #58 Support for cover attachments (thanks to -L0Lock-)
* Adding various speed improvements
* Adding changelog in GUI
* Adding #68 version upgrade dialogue
* Adding icons to encoders drop down
* Adding video filename path
* Adding Windows installer
* Adding check for new ffmpeg on startup
* Adding #69 nice feature for language selection (thanks to HannesJo0139)
* Adding #13 button to copy commands to clipboard and save to file
* Adding options to remove metadata and copy chapters